Closed Bug 1079250 Opened 10 years ago Closed 10 years ago

Intermittent test_bug640387_1.html | application crashed [@ mozilla::layers::TextureSharedDataGonkOGL::DeleteTextureIfPresent()]

Categories

(Core :: Graphics: Layers, defect)

x86
Gonk (Firefox OS)
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla35
Tracking Status
firefox33 --- wontfix
firefox34 --- fixed
firefox35 --- fixed
firefox-esr31 --- unaffected
b2g-v2.1 --- fixed
b2g-v2.2 --- fixed

People

(Reporter: cbook, Assigned: nical)

References

()

Details

(Keywords: crash, intermittent-failure)

Attachments

(1 file)

b2g_emulator_vm mozilla-inbound debug test mochitest-debug-6

https://treeherder.mozilla.org/ui/logviewer.html#?job_id=2815232&repo=mozilla-inbound

05:37:49 WARNING - PROCESS-CRASH | /tests/docshell/test/test_bug640387_1.html | application crashed [@ mozilla::layers::TextureSharedDataGonkOGL::DeleteTextureIfPresent()]
05:37:49 INFO - Crash dump filename: /tmp/tmp9sVQUw/45e7222f-8962-c6b3-3eb245db-6f54fdc1.dmp
05:37:49 INFO - Operating system: Android
05:37:49 INFO - 0.0.0 Linux 2.6.29-g41a03df #22 Thu Jun 26 10:59:09 CST 2014 armv7l Android/full/generic:4.0.4.0.4.0.4/OPENMASTER/eng.cltbld.20141007.050838:eng/test-keys
05:37:49 INFO - CPU: arm
05:37:49 INFO - 0 CPUs
05:37:49 INFO - Crash reason: SIGSEGV
05:37:49 INFO - Crash address: 0x0
05:37:49 INFO - Thread 20 (crashed)
05:37:49 INFO - 0 libxul.so!mozilla::layers::TextureSharedDataGonkOGL::DeleteTextureIfPresent() [TextureHostOGL.cpp:f17271ef08d3 : 250 + 0x4]
05:37:49 INFO - r4 = 0x483dc640 r5 = 0x483dc640 r6 = 0x4733a600 r7 = 0x4870f76c
05:37:49 INFO - r8 = 0x4783fd18 r9 = 0x4783fe40 r10 = 0x00000000 fp = 0x4783fd68
05:37:49 INFO - sp = 0x4783fba8 lr = 0x4110ee35 pc = 0x4110ee38
05:37:49 INFO - Found by: given as instruction pointer in context
05:37:49 INFO - 1 libxul.so!mozilla::layers::TextureSharedDataGonkOGL::~TextureSharedDataGonkOGL [TextureHostOGL.cpp:f17271ef08d3 : 179 + 0x3]
05:37:49 INFO - r4 = 0x483dc640 r5 = 0x483dc640 r6 = 0x4733a600 r7 = 0x4870f76c
05:37:49 INFO - r8 = 0x4783fd18 r9 = 0x4783fe40 r10 = 0x00000000 fp = 0x4783fd68
05:37:49 INFO - sp = 0x4783fbb8 pc = 0x4110f1d1
05:37:49 INFO - Found by: call frame info
05:37:49 INFO - 2 libxul.so!mozilla::layers::TextureSharedDataGonkOGL::~TextureSharedDataGonkOGL [TextureHostOGL.cpp:f17271ef08d3 : 180 + 0x3]
05:37:49 INFO - r4 = 0x483dc640 r5 = 0x483dc640 r6 = 0x4733a600 r7 = 0x4870f76c
05:37:49 INFO - r8 = 0x4783fd18 r9 = 0x4783fe40 r10 = 0x00000000 fp = 0x4783fd68
05:37:49 INFO - sp = 0x4783fbc0 pc = 0x4110f1e9
05:37:49 INFO - Found by: call frame info
05:37:49 INFO - 3 libxul.so!mozilla::layers::TextureSharedDataGonkOGL::Release() [TextureHostOGL.h : 103 + 0x7]
05:37:49 INFO - r4 = 0x00000000 r5 = 0x483dc640 r6 = 0x4733a600 r7 = 0x4870f76c
05:37:49 INFO - r8 = 0x4783fd18 r9 = 0x4783fe40 r10 = 0x00000000 fp = 0x4783fd68
05:37:49 INFO - sp = 0x4783fbc8 pc = 0x4110a6bd
05:37:49 INFO - Found by: call frame info
05:37:49 INFO - 4 libxul.so!mozilla::layers::GrallocTextureHostOGL::~GrallocTextureHostOGL [RefPtr.h : 301 + 0x3]
05:37:49 INFO - r4 = 0x00000040 r5 = 0x4870f760 r6 = 0x4870f760 r7 = 0x4870f76c
05:37:49 INFO - r8 = 0x4783fd18 r9 = 0x4783fe40 r10 = 0x00000000 fp = 0x4783fd68
05:37:49 INFO - sp = 0x4783fbe0 pc = 0x411104a7
05:37:49 INFO - Found by: call frame info
05:37:49 INF
Next! :)
Same thing as the previous gralloc-related shutdown crash. It makes more sense to assert mCompositor since gl() may return null if the compositor has already been marked as destroyed.
Assignee: nobody → nical.bugzilla
Attachment #8502458 - Flags: review?(sotaro.ikeda.g)
Attachment #8502458 - Flags: review?(sotaro.ikeda.g) → review+
https://hg.mozilla.org/mozilla-central/rev/759c780b92a2
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
I'm guessing we want this on 34 as well.
Flags: needinfo?(nical.bugzilla)
Comment on attachment 8502458 [details] [diff] [review]
assert for mCompositor rather than gl()

Approval Request Comment
[Feature/regressing bug #]:
[User impact if declined]: frequent intermittent oranges negatively affecting the happiness of sheriffs and other developers.
[Describe test coverage new/current, TBPL]:
[Risks and why]: none, replace an assertion by a better one (which is a strict subset of the previous one).
[String/UUID change made/needed]:
Attachment #8502458 - Flags: approval-mozilla-aurora?
Flags: needinfo?(nical.bugzilla)
Comment on attachment 8502458 [details] [diff] [review]
assert for mCompositor rather than gl()

Aurora+
Attachment #8502458 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.