Bug 1079250 - SharedDataGonkOGL::DeleteTextureIfPresent to assert mCompositor rather than gl(). r=sotaro, a=lmandel